--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,4 +1,18 @@
 p {
     background-color: rgb(255, 192, 203) ;
-    font-family: 'verdana', 'DejaVu Sans', 'sans serif';
+    font-family: verdana, "DejaVu Sans", sans serif;
+}
+
+#number-2 {
+    color: rgb(0, 0, 225) ;
+    font-size: 36px;
+}
+
+#number-4 {
+    background-color: rgb(127, 255, 0);
+    font-weight: bold;
+    font-size: 24px;
+}
+.cool-class {
+    font-size: 24px;
 }
